--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- Post-contest sim; see if my stuff matches Sabersim's
 - Read DKEntries, curl contest and player info, and output filled DKEntries.
 - Data storage on S3
 - Extend same method to NBA
