--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,12 @@
-- Generate more lineups - explore why just 2000 takes so long but generating field lineups is super fast.
+x Generate more lineups - explore why just 2000 takes so long but generating field lineups is super fast.
+x Debug explicit field generator not respecting salary constraint
+x Optimizer constraints for NBA
+- Figure out a way to prioritize less duplicated lineups
 - Data storage on S3
  - I should extend DK-contests to store contest results and payouts; Is there an API endpoint for finished contests?
  - Structure: date/{sport}/{slate}/{contest_id}/
  - Contents: draftables, payouts, results
 - Grab sabersim correlations for NFL as well.
-? Get higher sabersim plan for non-flagship ownership in showdown
+? Get higher sabersim plan for non-flagship ownership in non-showdown
 - Add good logging; put both diagnostic output and logs inside logs/{timestamp}/
+- GUI (web or non?)
